site/css/wea.css
/* ... */
#hamburger:hover > div{
    background-color:var(--wea-pink);
    transition: color 0.2s ease-in-out;
}







.thumb{
    margin:0;
    position:relative; 
    display:inline-block;
}



.thumb img{
    max-width:18rem;
    width:100%;
    height:100%;
    
}

.imageText{
    position: absolute;
    z-index: 1;
    color: white;
    background: transparent;
    opacity: 0;
    left: 0;
    top: 0;
    transition: all 0.8s ease;
    height: 100%;
    width: 100%;
    text-align:center;
    overflow:hidden;
    border: 1px solid var(--wea-pink);
}

#imageText.portrait{
    font-size:2rem;
}

#imageText.landscape{
    font-size:1.4rem;
}

/*{
    height: 100%;
    width: 100%;
    position:relative;
    opacity:0;
    text-decoration:none;
    display: flex;
    justify-content: center;
    align-items: center;
    color:inherit;
    
}*/

.thumb:hover .imageText{
    opacity: 1;
    background: rgba(0, 0, 0, 0.8);
    color:white;
}

.imageText *{
    color:white;
}

.pdfSize{
    font-size:50%;
    display:inline-block;
}

#unhighlightButton,
#goToNextSearch,
#goToPrevSearch{
    background-color: #dedede;
    max-width: 6em;
    margin-top: .5rem;
    color: black;
    font-size: 90%;
    text-align: center;
    cursor: pointer;
    min-height: 4rem;
}


#unhighlightButton.unhighlighted ~ div{
    display:none;
}

#unhighlightButton:hover,
#goToNextSearch:hover,
#goToPrevSearch:hover{
    background-color: #c7c7c7;
}

#unhighlightButton.unhighlighted::after{
    content: "Highlight search matches ("attr(data-count)")";
}

#unhighlightButton.highlighted::after{
    content: "Unhighlight search matches ("attr(data-count)")";
}

#goToNextSearch::after{
    content: "Go to next match";
}

#goToPrevSearch::after{
    content: "Go to previous match";
    
}


h1,h2,h3,h4,h5,h6{
    font-family: "Serif";

}


h1,h2,h3,h4,h5,h5,
.metadataLabel{
        color: #33383D;
}





div[data-el=body] > div[data-el=div] > h2,
h1{
    text-align:center;
}


div[data-el=body]>div[data-el=div]{
    /* Divs CANNOT get padding if they are
     * going to be targeted, since that
     * interferes with the offset for the sticky header. */
    margin:.5em;
}

div[data-el=p]{
    padding:.5em 0;
    text-align:justify;
}

.metadataLabel{
    text-transform:lowercase;
    font-variant:small-caps;
}

div[data-el='note'] > div[data-el='p']{
    display:inline;
}

[data-el='opener'],
[data-el='byline']{
    text-align:center;
}

/******************************************************************* PAGE BREAKS **********/
span[data-el='pb']{
    width:100%;
    margin:var(--pb-margin-tb) 0;
    display:block;
    border-bottom-style: inset;
    border-bottom-width: 1px;
    border-color:#757575;
    color: #757575;
}

.pbNum{
    float:right;
    margin-right:-10%;
}
.pbNum::before{
    content:"[";
}

.pbNum::after{
    content:']';
}

span[data-el='pb'].first{
    border:none;
    margin:0;
}

/********************************************************************* INLINE ELEMENTS ******** */
[data-el='supplied']::before{
    content:'[';
}

[data-el='supplied']::after{
    content:']';
}

[data-el='supplied'][data-cert='low']::after{
    content:'?]';
}

[data-el='gap']::after{
    content:'[...]';
}


[data-el='title'][data-level='j'],
[data-el='title'][data-level='m']{
    font-style:italic;
}

[data-el='title'][data-level='j'] > [data-el='title'][data-level='j'],
[data-el='title'][data-level='j'] > [data-el='title'][data-level='m'],
[data-el='title'][data-level='m'] > [data-el='title'][data-level='j'],
[data-el='title'][data-level='m'] > [data-el='title'][data-level='m']
{
    font-style:normal;   
}




div.blockquote{
    margin: 1.5rem 5rem 1.5rem 1.5rem;
    font-size:95%;
}


span[data-el='foreign']{
    font-style:italic;
}

span[data-el='q']::before,
span[data-el='title'][data-level='a']::before{
    content:"“";
   
}

span[data-el='q']::after,
span[data-el='title'][data-level='a']::after{
    content:"”";
}


div[data-el='lg']{
    padding: .5em 0;
}

span[data-el='q'] span[data-el='q']::before{
    content:"‘";
}

span[data-el='q'] span[data-el='q']::after{
    content:"’";
}


/************************************************************************* NOTE MARKERS  */
.noteMarker{
    padding-left: .1rem;
    position: relative;
    top: .1rem;
}

.noteMarker > sup{
    vertical-align: baseline;
    position: relative;
    top: -.3rem;
}
.noteMarker:focus{
    outline: thin dotted;
}


/************************************************************************ POPUPS */
#popup.hidden{
    display:none;
}

#popup.showing{
    position:absolute;
    word-wrap: break-word;
    font-size:1.2rem;
    background:white;
    padding:.75em;
    border: 1px solid #b9b9b9;
    border-radius: 9px;
    box-shadow: 1px 1px 1px #b9b9b9;
    display:block;
    animation: fade-in .5s;
    margin-left: .15rem;
    max-width:25rem;
    z-index:20;

}

/***************************************************************************** ANIMATIONS */
@keyframes fade-in {
  from { 
    opacity: 0; 
  }
  to { 
    opacity: 1; 
  }
}
#popup::after, #popup::before {
	right: 100%;
	top: 50%;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
}

#popup::after {
	border-color: rgba(255, 255, 255, 0);
	border-right-color: white;
		/* THIS IS WHAT CONTROLS THE ARROW SIZE */
	border-width: 6px;
	margin-top: -6px;
}
#popup::before {
	border-color: rgba(185, 185, 185, 0);
	border-right-color: #b9b9b9;
    /* SHHOULD ALWAYS BE +BORERWIDTH */
	border-width: 7.5px;
	margin-top: -7.5px;
}

#popup.hidden{
    display:none;
   opacity:0;
}


#popup_content{
    margin: .5em .25em .25em .25em;
    font-size:75%;
}

#popup_content .returnToNote{
 display:none;   
}

#popup_closer{
    float:right;
    top:5rem;
    font-size:70%;
    color:black;
    font-weight:bold;
    cursor:pointer;
}


a{
    text-decoration:none;
}





.citationItem{
    text-indent:-2rem;
    padding-left:2rem;
    
}
/* ... */

